@@ -20,6 +20,19 @@ set auto_index(::vfs::ftp::removedirectory) [list source [file join $dir ftpvfs.
 set auto_index(::vfs::ftp::deletefile) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::fileattributes) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::utime) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::http::Mount) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::Unmount) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::handler) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::stat) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::access) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::open) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::_findHttpInfo) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::matchindirectory) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::createdirectory) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::removedirectory) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::deletefile) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::fileattributes) [list source [file join $dir httpvfs.tcl]]
+set auto_index(::vfs::http::utime) [list source [file join $dir httpvfs.tcl]]
 set auto_index(::vfs::mk4::Mount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::Unmount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::handler) [list source [file join $dir mk4vfs.tcl]]
@@ -47,20 +60,20 @@ set auto_index(::mk4vfs::find/file) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::find/dir) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::scripdoc::init) [list source [file join $dir scripdoc.tcl]]
 set auto_index(::scripdoc::extendPath) [list source [file join $dir scripdoc.tcl]]
-set auto_index(::vfs::tclproc::Mount) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::Unmount) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::handler) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::stat) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::access) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::exists) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::open) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::_generate) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::matchindirectory) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::createdirectory) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::removedirectory) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::deletefile) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::fileattributes) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::tclproc::utime) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::Mount) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::Unmount) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::handler) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::stat) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::access) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::exists) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::open) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::_generate) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::matchindirectory) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::createdirectory) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::removedirectory) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::deletefile) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::fileattributes) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::ns::utime) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::test::Mount) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::Unmount) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::handler) [list source [file join $dir testvfs.tcl]]
@@ -74,8 +87,16 @@ set auto_index(::vfs::test::deletefile) [list source [file join $dir testvfs.tcl
 set auto_index(::vfs::test::fileattributes) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::utime) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::debug) [list source [file join $dir vfs.tcl]]
-set auto_index(::vfs::url::Mount) [list source [file join $dir vfsUrl.tcl]]
-set auto_index(::vfs::url::handler) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::Mount) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::handler) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::stat) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::access) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::matchindirectory) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::createdirectory) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::removedirectory) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::deletefile) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::fileattributes) [list source [file join $dir vfsUrl.tcl]]
+set auto_index(::vfs::urltype::utime) [list source [file join $dir vfsUrl.tcl]]
 set auto_index(::vfs::listVolumes) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::addVolume) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::removeVolume) [list source [file join $dir vfsUtils.tcl]]
